--- a/drafts/ch1/citations_annotated.bib
+++ b/drafts/ch1/citations_annotated.bib
@@ -2,12 +2,33 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for hzabriskie at 2016-03-01 02:56:34 -0500 
+%% Created for hzabriskie at 2016-03-04 02:26:04 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{scikit-learn,
+	Author = {Pedregosa, F. and Varoquaux, G. and Gramfort, A. and Michel, V. and Thirion, B. and Grisel, O. and Blondel, M. and Prettenhofer, P. and Weiss, R. and Dubourg, V. and Vanderplas, J. and Passos, A. and Cournapeau, D. and Brucher, M. and Perrot, M. and Duchesnay, E.},
+	Date-Added = {2016-03-04 07:25:50 +0000},
+	Date-Modified = {2016-03-04 07:26:03 +0000},
+	Journal = {Journal of Machine Learning Research},
+	Keywords = {machine learning},
+	Pages = {2825--2830},
+	Title = {Scikit-learn: Machine Learning in {P}ython},
+	Volume = {12},
+	Year = {2011}}
+
+@article{leonard2015rnn,
+	Author = {L{\'e}onard, Nicholas and Waghmare, Sagar and Wang, Yang},
+	Date-Added = {2016-03-04 07:17:27 +0000},
+	Date-Modified = {2016-03-04 07:18:21 +0000},
+	Journaltitle = {arXiv},
+	Keywords = {neural networks, machine learning},
+	Number = {1511.07889},
+	Title = {rnn: Recurrent Library for Torch},
+	Year = {2015}}
 
 @book{dreyfus1996bach,
 	Author = {Dreyfus, Laurence},
