--- a/drafts/ch2/ch2_draft.tex
+++ b/drafts/ch2/ch2_draft.tex
@@ -29,11 +29,9 @@
 
 \section{Motivation for the harmonization task}
 
-The task explored in this paper is the generation of four-part counterpoint given a chorale melody. J.S. Bach's collection of over 300 chorale harmonizations is used as the dataset because it remains today one of the finest examples of four-part counterpoint. Each harmonization is a complex solution, satisfying a variety of voice leading and cadential constraints, as well as innumerable other conventions of musical style. Chorale harmonization is therefore a fundamentally difficult computational task. Initial observations might suggest a rule-based approach to this task, whereby musical constraints are computationally encoded and only harmonizations that satisfy them are generated. However, a purely rule-based approach is rendered impractical by a couple important factors. One is the sheer number of conventions that would need to be encoded, each with a varying level of specificity and precedence with respect to the other encoded conventions. Determining precisely what those conventions would be is an even more difficult problem, since many chorale constraints are vaguely defined or flexible in application. Another reason for avoiding a rule-based approach is that an infinite quantity of harmonizations exist that satisfy any given chorale melody. The goal is not to simply produce satisfying harmonizations, but to \textit{approximate} Bach's harmonization as closely as possible. In contrast, a "learning" model updates its parameters to capture the complex correlations and patterns it discovers in the training set of harmonizations. Applying those parameters to a new chorale melody will then yield a predicted harmonization, and its predictions will directly reflect (and only reflect) the harmonizations the model was trained upon.
+The task explored in this paper is the generation of four-part counterpoint given a chorale melody. J.S. Bach's collection of over 300 chorale harmonizations is used as the dataset because it remains today one of the finest examples of four-part counterpoint. Each harmonization is a complex solution, satisfying a variety of voice leading and cadential constraints, as well as innumerable other conventions of musical style. Chorale harmonization is therefore a fundamentally difficult computational task. The reader might ask whether a rule-based approach is suitable to this task, since after all, isn't harmonization are a largely rule-based. Couldn't musical constraints would be computationally encoded and then only harmonizations that satisfy them are generated? However, a purely rule-based approach is rendered impractical by a couple important factors. One is the sheer number of conventions that would need to be encoded, each with a varying level of specificity and precedence with respect to the other encoded conventions. Determining precisely what those conventions would be is an even more difficult problem, since many chorale constraints are vaguely defined or flexible in application. Another reason for avoiding a rule-based approach is that an infinite quantity of harmonizations exist that satisfy any given chorale melody. The goal is not to simply produce satisfying harmonizations, but to \textit{approximate} Bach's harmonization as closely as possible. In contrast, a "learning" model updates its parameters to capture the complex correlations and patterns it discovers in the training set of harmonizations. Applying those parameters to a new chorale melody will then yield a predicted harmonization, and its predictions will directly reflect (and only reflect) the harmonizations the model was trained upon.
   
 \section{Literature Review}
-
-\subsection{Previous Work}
 
 \citet{hild1992harmonet} presented the first effective neural network approach for harmonizing chorales, generation harmonizations on the level of an "improvising organist" (p. 272). The task decomposed into three subtasks, each learned by a neural net. A harmonic skeleton is first created by sweeping through the chorale melody and determining a harmony for each beat, where harmony is represented by a unique figured bass notation. For each time step $t$, the network takes an input a window of information, including the harmonies chosen in the interval$[t-3, t-1]$ and the melody pitches in the interval $[t-1, t+1]$. The resulting harmonic skeleton is passed to another network to generate a chord skeleton, which selects the inner voices based on the input figured bass, and a final network adds ornamental eighth notes to restore passing tones between chords. Although, HARMONET demonstrated strong success, the model used external "chorale constraints" \citep[p.~271]{hild1992harmonet} in constructing the chord skeleton in order to avoid unfavorable chord structures. The models presented in this paper attempt to learn the task of harmonization without any form of manual intervention in the network's learning process. \\
 
@@ -43,13 +41,9 @@ Research specifically on models for the Bach chorales have seen a variety of app
 
 My approach consists of applying a variety of non-neural and neural models to the task of chorale harmonization. Recent harmonization and generative models (\cite{allan2005harmonising}; \cite{kaliakatsos2014}; \cite{greff2015lstm}) relied on a dataset that includes only pitch information about each time step, and the objective was in all cases next step pitch prediction. My goal was to extract a new set of features from Bach's chorales and examine how those features improved or worsened model performance. Moreover, the objective was to learn a series of musical processes that decide the harmony at each time step that include both harmonic analysis and note selection. I chose this approach to mimic the decisions a musician would make today in harmonizing a chorale.
 
-\section{Methods}
+\subsection{Harmonization tasks}
 
-A corpus of chorales was gathered in MIDI format (\cite{greentree2005}) through the \textsc{music21} library. \textsc{music21} is maintained by Professor Michael Scott Cuthbert at MIT and provided the essential tools for parsing musical scores and musical feature extraction. The code developed for this paper builds off of the built-in \textsc{music21} objects that represents the hierarchy of musical components introduced in Chapter 1. From this dataset, 326 4-voice chorales were gathered, and some manual cleaning was then performed to correct mistakes in the musicXML format related to key signatures and clear mistakes in notation. Each chorale was then sampled at each quarter-note time frame so that rhythmic variation would be factored out. Like modern church hymns, Bach's chorales are very uniformly structured, with harmonic progressions that change on each beat. Moving eighth notes typically help with voice leading rather than define the harmony so quarter-note sampling is a reasonable approach and has been used in several other studies (\cite{hild1992harmonet}; \cite{madsen2002}; \cite{kaliakatsos2014}).
-
-\subsection{Harmonization subtasks}
-
-In order to evaluate a model's ability to learn different aspects of the harmonization process the decision process was broken into 4 sequential subtasks. For each melody note in each chorale, the following target outputs were extracted.
+Each model was tasked with learning both harmonic analysis and harmonic prediction processes. In order to evaluate a model's ability to learn different aspects of the harmonization process the decision process was broken into 4 sequential subtasks. For each melody note in each chorale, the following target outputs were extracted.
 
 \begin{enumerate}
 \item \textit{Roman numeral}. The model first decided the general harmonic function by selecting a Roman numeral per Roman numeral analysis. This decision holds the most importance since it decides what notes are allowed for the alto and tenor voices.
@@ -93,6 +87,19 @@ In order to generate the correct Roman numeral analysis for the first two subtas
 \end{tikzpicture}
 \end{center}
 \end{figure}
+
+
+\section{Methods}
+
+\subsection{Important resources}
+
+We gathered chorale in MusicXML format through the \textsc{music21} \texttt{corpus} module, which originally obtained the chorales from \citet{greentree2005}. \textsc{music21} is a toolkit for computational musicology maintained by Professor Michael Scott Cuthbert at MIT \citep{cuthbertmusic21}, and its library is built upon a comprehensive array of objects and methods that represent the fundamental musical components introduced in Chapter 1. For our purposes, \textsc{music21} was used extensively to transform musical scores into symbolic representations and extracting musical features from those scores for machine learning. It was also used to generate realizations of predicted chorale harmonizations as actual scores, which are provided in Chapter 3. \\
+
+In order to construct and train neural networks, the scientific computing framework Torch was used, which is written in the Lua programming language. The \texttt{rnn} library, which is designed to extend the capabilities of the \texttt{nn} module in Torch, was used to implement recurrent neural networks like RNNs and LSTM networks \citep{leonard2015rnn}. Non-neural models were selected from the fully implemented classification algorithms in the machine learning library \texttt{scikit-learn} \citep{scikit-learn}.
+
+\subsection{Data}
+
+The dataset consists of 326 4-voice chorales gathered from the \textsc{music21} library. Once collected, some manual cleaning was then performed to correct mistakes in the musicXML format related to key signatures and significant mistakes in notation (based on a visual comparison with the Riemenschneider edition of the Chorales). Chorales with significant periods of rest were removed from the dataset because 3-voice harmonies have ambiguous implications in the 4-voice model that the chorales conventionally observe. Next, the chorales were "quantized" to create strictly chordal progressions of 4-voice harmony. Like modern church hymns, Bach's chorales are uniformly structured as chordal progressions, with a consistent beat-long rate of harmonic transition. Therefore, the process of quantizing each chorale into a series of discrete and uniform time steps, each the length of a beat, could be accomplished without damaging the underlying harmonic progression. Eighth notes were removed from the voices to eliminate additional rhythmic complexity. Eighth notes facilitate voice leading in Bach's harmonizations, but rarely function as an essential part of the harmony, making their removal a reasonable design decision. This process of quantizing the chorale into quarter-note samples has been found to be effective in several other studies (\cite{hild1992harmonet}; \cite{madsen2002}; \cite{kaliakatsos2014}).
 
 
 \subsection{Feature Extraction}
