--- a/drafts/ch3_4/ch3_4_draft.tex
+++ b/drafts/ch3_4/ch3_4_draft.tex
@@ -191,10 +191,10 @@ Given that the MFFC frequency is 5\%, these results show a significant increase 
 
 \subsection{Further Exploration: The Bach Inventions}
 
-The reality is a model trained to harmonize chorales has limited utility in modern times (although it might have made Bach's work as \textit{Kapellmeister} a bit easier). Musicians only look to Bach's chorales as early model compositions for 4 voices and for theory-related exercises. Chorales also have both a limited harmonic complexity as well as rhythmic complexity, since they remain harmonically close to the tonic key and are easily segmented into beat-long sections. This simplicity makes the chorales advantageous for statistical learning and allowed my models to output a uniform set of harmonizations over all inputs. But as chorale harmonization is increasingly well-understood as a computational task, it is worth recognizing the ways in which these models can be extended to more general and common musical processes. As one potential application of these models, I will explore the task of composing a counterpoint line given an input melody, and how this might be approached from a computational standpoint. This task is intentionally general and could be applied to a wide variety of well-known musical corpuses. But here, I will focus on Bach's 15 Inventions because they are a body of exemplary two-voice counterpoint compositions by the same composer as the Chorales. Despite being written explicitly as musical exercises, they are also more melodically and rhythmically intriguing than the Chorales.
+It must be admitted that a model trained to harmonize chorales has limited utility in modern times (although it might have made Bach's work as \textit{Kapellmeister} a bit easier). Musicians only look to Bach's chorales as early model compositions for 4 voices and for theory-related exercises. Moreover, the Chorales themselves use a limited rhythmic and textural vocabulary, since they remain harmonically close to the tonic key and the rate of harmonic change is consistent, and highly variable in almost all other repertoire. <-- \textbf{FIX THIS LINE} This simplicity makes the chorales advantageous for statistical learning and allows our models to output a uniform set of harmonizations over all inputs. But as chorale harmonization is increasingly well-understood as a computational task, it is worth recognizing the ways in which these models can be extended to more common musical processes. As one potential application of these models, I will explore the task of composing a counterpoint line given an input melody, and how this might be approached from a computational standpoint. This task is intentionally general and could be applied to a wide variety of well-known musical corpora. But here, I will focus on Bach's 15 Inventions because they are a body of exemplary two-voice counterpoint compositions by the same composer who wrote the Chorales. Despite being written explicitly as musical exercises, they are far more melodically and rhythmically complex than the Chorales.
 
 \subsubsection{Added complexity}
-Generating harmonizations for inventions introduces several new layers of musical complexity that were not considered when harmonizing the chorales. One is rhythmic complexity, since Invention melodies cannot be easily abstracted into units of a single rhythmic length. One method for describing rhythm in the generated melody is by generating predictions at the level of the smallest rhythmic unit (say a choice of pitch or rest for every 16th beat), and then determining the duration of the pitch based on the number of iterations that the same pitch is consecutively output by the model. \citet{eck2002blues} found this approach effective for composing blues melodies. An similar but alternative model was proposed by \citet{franklin2006jazz}, where separate LSTMs are trained to decide pitch and duration. An additional layer complexity is the large-scale structure of the Invention. Inventions typically consist of a series of thematic statements interleaved with episodes - modulatory sections that are melodically derived from the subject and create transitions between thematic statements in different keys. The remaining sections might be termed "elaborations", which include cadences at the ends of episodes and codettas that occasionally come at the end of an Invention. Each type of section has a specific set of conventions that govern its structure as well as the relationship between the two voices. A final layer of complexity to note is the need for subject identification. In contrast to the Chorales, a single melodic idea (the "invention", or subject) governs the development of the entire work, and it is consistently restated in various transformations. Identification of the subject is essential for determining the melodic, harmonic, and rhythmic material used in the Invention, and features from the subject should be extracted to create contrapuntal melodies.
+Generating harmonizations for inventions introduces several new layers of musical complexity that were not considered when harmonizing the chorales. One is rhythmic complexity, since Invention melodies cannot be easily abstracted into units of a single rhythmic length. One method for describing rhythm in the generated melody is by generating predictions at the level of the smallest rhythmic unit. For example, if the smallest rhythmic unit in the composition is the 32nd notes, then each measure would be divided into 32 samples. Then after a prediction, \textbf{FINISH THIS SENTENCE} determining the duration of the pitch based on the number of iterations that the same pitch is consecutively output by the model. \citet{eck2002blues} found this approach effective for composing blues melodies. An similar but alternative model was proposed by \citet{franklin2006jazz}, where separate LSTMs are trained to decide pitch and duration. An additional layer complexity is the large-scale structure of the Invention. Inventions typically consist of a series of thematic statements interleaved with episodes - modulatory sections that are melodically derived from the subject and create transitions between thematic statements in different keys. The remaining sections might be termed "elaborations", which include cadences at the ends of episodes and codettas that occasionally come at the end of an Invention. Each type of section has a specific set of conventions that govern its structure as well as the relationship between the two voices. A final layer of complexity to note is the need for subject identification. In contrast to the Chorales, a single melodic idea (the "invention", or subject) governs the development of the entire work, and it is consistently restated in various transformations (\textbf{check about "invention" in Dreyfus, does it mean a subject or more like elaboration? find a quote}). Identification of the subject is essential for determining the melodic, harmonic, and rhythmic material used in the Invention, and features from the subject should be extracted to create contrapuntal melodies.
 
 \subsubsection{Subject identification}
 Bach's Inventions are two-voice compositions, where the lower voice can be characterized as a \textit{function} of the upper voice. In order for the model to learn the harmonic and rhythmic material that Bach employs in the work, the model should first identify and extract features from the Invention's primary \textit{subject}. Identifying the subject generally straightforward for the listener, since the primary subject is typically the first statement in the upper voice. However, inventions can contain multiple subjects with varying levels of importance. And in Invention No. 6 in E major, Bach introduces two subjects of equal importance and develops them both consistently throughout. Therefore, a better approach might be to identify subjects by selecting melodic ideas based on the frequency with which they are restated. \citet{dreyfus1996bach} notes that the frequency of a subject is directly correlated with its importance in the Invention - a principle of repetition that is generally true of melodies in Western music. One candidate algorithm for subject identification based on repetition is hierarchal agglomerative clustering (HAC), which can learn to "cluster" melodic segments based on a supplied distance metric. \citet{nagler2014schubot} applied HAC to the task of motivic analysis in Schubert's song cycle \textit{Die Winterreise} and found promising results in extracting the main motive from each song. However, a significant difficulty in subject identification would be the harmonic and rhythmic transformations that are often applied to the subject when it is restated. For this task, it could be useful to encode the melody as a series of intervals rather than pitches in order to identify subjects in their original form as well as their transformed state. \\
@@ -220,7 +220,7 @@ The primary technique for implying harmonies is the use of scalar and triadic pa
 
 \subsubsection{Contrapuntal melodic generation}
 Using the structural information gathered during preprocessing, a final classifier is trained to generate contrapuntal melodies. The classifier would accept input features describing the current relevant subject, the current section of the form, and the current implied harmony, as well as melodic features related to the upper voice near time $t$. The output feature would describe the most likely pitch for time $t$, with an implied duration of the length of the time step. Consecutive time steps of the same pitch could be merged to represented longer notes. \\
-The generalization of this model allows for a wide range of corpuses to be incorporated into the training data. Stylistically similar candidates include Bach's Sinfonias (the 3-voice equivalent of the Inventions) and the Fugues. Stylistically separate candidates include Palestrina's masses and motets, which feature significant contrapuntal composition and development of melodic motives in multiple voices. The larger dataset available for training will very likely improve model performance, in comparison to the computationally small dataset of chorales used in this paper. Further work should be done to explore this extension of the harmonization task to various musical corpuses.
+The generalization of this model allows for a wide range of corpora to be incorporated into the training data. Stylistically similar candidates include Bach's Sinfonias (the 3-voice equivalent of the Inventions) and the Fugues. Stylistically separate candidates include Palestrina's masses and motets, which feature significant contrapuntal composition and development of melodic motives in multiple voices. The larger dataset available for training will very likely improve model performance, in comparison to the computationally small dataset of chorales used in this paper. Further work should be done to explore this extension of the harmonization task to various musical corpora.
 
 \newpage
 
